feat: adjust the ratelimiting and minor improvements
